# trace-session-split

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/trace_session_split/: __init__.py  __main__.py  core.py
src/trace_session_split.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_split.py
